--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -5,7 +5,115 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreenActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:id="@+id/titleLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/titlebarTextView"
+            android:text="@string/titleText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"/>
+        <View
+            android:id="@+id/statusView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="#FF0F0F"
+            />
+        </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/sendsmsView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/titleLayout"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/receiversEditText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:hint="receipent"
+
+            />
+            <Button
+                android:id="@+id/searchContactButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Search"/>
+
+        </LinearLayout>
+
+        <EditText
+            android:hint="type message here"
+            android:id="@+id/messageTextEditText"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:inputType="textMultiLine"
+            android:gravity="top"
+            />
+        <Button
+            android:id="@+id/sendButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:text="Send"
+            />
+
+        </LinearLayout>
+    <LinearLayout
+        android:id="@+id/registerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/elem_padding"
+        android:layout_below="@id/titleLayout"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/elem_padding"
+            android:text="You have not registered your meet user account here with this app.\n
+            Please provide this information first."/>
+
+        <Button
+            android:id="@+id/gotoSettingButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/elem_padding"
+            android:text="go to Setting"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@color/material_deep_teal_200"
+            android:layout_marginBottom="@dimen/elem_padding">
+
+        </View>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:linksClickable="true"
+            android:layout_marginBottom="@dimen/elem_padding"
+            android:text="If you have no account at meet.com.np, make one first."/>
+
+        <Button
+            android:id="@+id/createAccountButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/elem_padding"
+            android:text="Create Account"
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
