--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="elem_padding">10dp</dimen>
+    <dimen name="medium_info_font">15sp</dimen>
+    <dimen name="large_info_font">20sp</dimen>
 </resources>
