--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreenActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" >
 
     <LinearLayout
         android:id="@+id/titleLayout"
@@ -30,7 +30,7 @@
     <LinearLayout
         android:id="@+id/sendsmsView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/titleLayout"
         android:orientation="vertical">
         <LinearLayout
@@ -121,6 +121,24 @@
             android:text="Send"
             />
         </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="History"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="@color/material_blue_grey_800"/>
+
+            <ListView
+                android:id="@+id/historyListView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </ListView>
+
         </LinearLayout>
     <LinearLayout
         android:id="@+id/registerView"
