--- a/app/src/main/res/values/strings_activity_settings.xml
+++ b/app/src/main/res/values/strings_activity_settings.xml
@@ -7,7 +7,7 @@
     <string name="pref_header_general">meet.net.np credentials</string>
 
     <string name="pref_title_username">Username</string>
-    <string name="pref_default_username">scvishnu7</string>
+    <string name="pref_default_username">username</string>
 
     <string name="pref_title_password">Password</string>
     <string name="pref_default_password">******</string>
@@ -23,7 +23,7 @@
     <string name="pref_title_default_recipient">Default Recipient</string>
 
     <string name="pref_title_msg_signature">Signature</string>
-    <string name="pref_default_signature">:scvishnu7</string>
+    <string name="pref_default_signature">:your_name</string>
 
 
 </resources>
